<resources>
    <string name="app_name">Assistente Dinamo</string>
    <string name="user_textfield_label">Usuário</string>
    <string name="password_textfield_label">Senha</string>
    <string name="otp_textfield_label">OTP</string>

    <!--Input error messages-->
    <string name="required_field">Campo Obrigatório</string>

    <string name="shr_logo_content_description">"Logo Dinamo"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar_usuario">Adicionar Usuário</string>
    <string name="atualizar">Atualizar</string>
    <string name="fechar_sessao">Fechar sessão</string>
    <string name="change_pwd">Trocar senha</string>
    <string name="criar_usuario">Criar usuário</string>
    <string name="confirm_pwd">Confirme a senha</string>

    <string name="savePermissionButtonLabel">salvar</string>
    <string name="leituraPermissionText">Leitura</string>
    <string name="criarPermissionText">Criação</string>
    <string name="deletePermissionText">Remoção</string>
    <string name="atualizarPermissionText">Atualização</string>
    <string name="permissionSavedToastText">Permissão salva com sucesso</string>
    <string name="internal_error_dialog_title">Erro Interno</string>
    <string name="internal_error_dialog_message">Verifique se seu usuário posusi permissão para realizar esta operação</string>
    <string name="screenTitle_usuario">Usuário</string>
    <string name="screenTitle_gestao">Gestão</string>
    <string name="screenTitle_relacoes">Relações</string>
    <string name="screenTitle_certificados">Certificados</string>
    <string name="screenTitle_permissao">Permissão</string>
    <string name="screenTitle_novaPermissao">Nova Permissão</string>
    <string name="screenTitle_newUser">Novo usuário</string>
    <string name="invalidTokenDialog_title">Credenciais inválidas</string>
    <string name="invalidTokenDialog_message">Faça o login novamente</string>
    <string name="noInternetDialog_title">Erro ao conectar-se</string>
    <string name="noInternet_message">Verifique sua conexão com a internet e tente novamente</string>
    <string name="password_confirmation">Confirmacao da senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="pwdAlteredWithSuccess">Senha alterada com sucesso</string>

    <!--INPUT ERROR-->
    <string name="ERR_INPUT_notAlphanumeric">O nome deve conter apenas caracteres alfanuméricos</string>
    <string name="wrong_confirmation">Confirmacão difere da senha</string>
    <string name="pwd_too_short">Senha deve conter pelo menos 8 caracteres</string>

    <!--API ERROR-->
    <string name="ERR_ACCESS_DENIED_message">Acesso negado</string>
    <string name="ERR_DESCONHECIDO_message">Erro desconhecido</string>
    <string name="ERR_USR_NOT_FOUND_message">Usuário não encontrado</string>
    <string name="ERR_USR_ALREADY_EXISTS_message">Usuário já existe</string>

    <string name="userCreated_toast">Usuário criado com sucesso</string>
    <string name="permissionSaved_toast">Permissão salva com sucesso</string>
    <string name="screenTitle_userSelection">Seleção de usuário</string>
    <string name="screenTitle_changePwd">Trocar senha</string>
    <string name="leituraPermissionDescription">Habilitar visualização e uso dos certificados na partição</string>
    <string name="criacaoPermisssionDescription">Habilita criação de novos certificados.</string>
    <string name="deletePermissionDescription">Habilita a remoção de certificados na partição</string>
    <string name="atualizarPermissionDescription">Habilita a atualização de certificados na partição</string>
    <string name="ERR_INVALID_KEY_message">Sessão expirou</string>
    <string name="ERR_INVALID_PAYLOAD_message">Entrada inválida</string>
    <string name="yes">Sim</string>
    <string name="noContentText_trustees">Nenhum usuário listado</string>
    <string name="noContentText_trusters">Nenhum usuário listado</string>
    <string name="noContentText_objetos">Nenhum certificado listado</string>
    <string name="conectar">Conectar</string>
    <string name="setupSecondTitle">Configuração</string>
    <string name="setUpFirstTitle">HSM pocket</string>
    <string name="usr_options_change_hsm">Conectar-se a outro HSM</string>
    <string name="usr_options_hsm_menu">Opções do HSM</string>
    <string name="noInternet_title">Sem conexão com a internet.</string>
    <string name="ERR_SERVICE_NOT_STARTED_title">Serviço não iniciado</string>
    <string name="ERR_SERVICE_NOT_STARTED_message">Inicie o serviço do HSM para entrar com seu usuário.</string>


</resources>
